--- a/style.css
+++ b/style.css
@@ -23,13 +23,13 @@
     margin: 0 23px;
   }
   .left{
-    font-size: 1.5rem;
+    font-size: 1.02rem;
   }
   .firstSection{
     display: flex;
     justify-content: space-around;
-    margin: 80px 0;
-   
+    align-items: center;
+   margin: 130px 0;
   }
   .firstSection> div{
     width: 30%;
@@ -46,4 +46,32 @@
 
 .purple{
     color: rgb(178, 131, 224);
+}
+
+nav ul li a{
+ text-decoration: none;
+ color: white;
+}
+nav ul li a:hover{
+  color: rgb(149, 149, 211);
+ }
+
+ main hr{
+  border: 0;
+  background-color: #9c97f1;
+height: 1.2px;
+margin: 40px 84px;
+
+ }
+ #element{
+    color: rgb(149, 149, 211);
+ }
+ .secondSection{
+    max-width: 80vw;
+    margin: auto;
+    height: 60vh;
+ }
+ 
+ .secondSection h1{
+font-size: 2.5rem;
 }
